--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,7 @@
 {
   "*.py": [
     "python -m mypy",
-    "python -m pylint",
+    "python -m pylint --rcfile ./.pylintrc",
     "python -m black"
   ]
 }
