--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,11 @@ repository = "https://github.com/gofixpoint/fixpoint"
 include = ["src/fixpoint/py.typed"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
 pydantic = ">=2"
 typing-extensions = ">=4.7.1"
 openai = "^1.30.1"
+instructor = "^1.2.6"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.0"
