--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ include = ["src/fixpoint/py.typed"]
 python = "^3.8"
 pydantic = ">=2"
 typing-extensions = ">=4.7.1"
+openai = "^1.30.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.0"
