--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ openai = "^1.30.1"
 tiktoken = "^0.7.0"
 # instructor v1.3.0 breaks the package, so restrict to versions 1.2.x
 instructor = "~1.2.6"
+cachetools = "^5.3.3"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.0"
