--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ openai = "^1.30.1"
 tiktoken = "^0.7.0"
 # instructor v1.3.0 breaks the package, so restrict to versions 1.2.x
 instructor = "~1.2.6"
+freezegun = "^1.5.1"
+types-cachetools = "^5.3.0.7"
 cachetools = "^5.3.3"
 
 [tool.poetry.group.dev.dependencies]
