--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "fixpoint"
 version = "0.1.0"
 description = "Open source infra for reliable multi-step AI workflows."
+homepage = "https://fixpoint.co/"
 authors = ["Fixpoint <team@fixpoint.co>"]
 
 classifiers = [
@@ -20,7 +21,8 @@ pydantic = ">=2"
 typing-extensions = ">=4.7.1"
 openai = "^1.30.1"
 tiktoken = "^0.7.0"
-instructor = "^1.2.6"
+# instructor v1.3.0 breaks the package, so restrict to versions 1.2.x
+instructor = "~1.2.6"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.0"
@@ -32,8 +34,8 @@ ipdb = "^0.13.13"
 mypy = "^1.10.0"
 
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.pylint.'MESSAGES CONTROL']
 extension-pkg-whitelist = "pydantic"
