Set up "fixpoint_extras" package
Set up the "fixpoint_extras" package, which is for implementing extra
things on top of the Fixpoint core, which should not be part of the
core package.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,12 @@ classifiers = [
 license = "License :: OSI Approved :: Apache Software License"
 readme = "README.md"
 repository = "https://github.com/gofixpoint/fixpoint"
+
+packages = [
+    { include = "fixpoint", from = "src" },
+    { include = "fixpoint_extras", from = "src" },
+]
+
 include = ["src/fixpoint/py.typed"]
 
 [tool.poetry.dependencies]
