--- a/.pylintrc
+++ b/.pylintrc
@@ -435,7 +435,8 @@ disable=raw-checker-failed,
         similarities,
         too-many-arguments,
         too-many-instance-attributes,
-        too-many-return-statements
+        too-many-return-statements,
+        no-else-return
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
