--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ cachetools = "^5.3.3"
 pandas = { version = "^2.2.2", optional = true }
 jinja2 = "^3.1.4"
 diskcache = "^5.6.3"
+supabase = "^2.5.0"
+psycopg = "^3.1.19"
 
 [tool.poetry.group.dev.dependencies]
 freezegun = "^1.5.1"
