--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ types-cachetools = "^5.3.0.7"
 cachetools = "^5.3.3"
 pandas = { version = "^2.2.2", optional = true }
 jinja2 = "^3.1.4"
+diskcache = "^5.6.3"
 
 [tool.poetry.group.dev.dependencies]
 freezegun = "^1.5.1"
