--- a/.pylintrc
+++ b/.pylintrc
@@ -436,7 +436,8 @@ disable=raw-checker-failed,
         too-many-arguments,
         too-many-instance-attributes,
         too-many-return-statements,
-        no-else-return
+        no-else-return,
+        consider-iterating-dictionary
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
