--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write --list-different .",
+    "formatcheck": "prettier --check .",
+    "lint": "next lint",
+    "typecheck": "tsc --pretty --noEmit"
   },
   "repository": {
     "type": "git",
@@ -26,6 +30,11 @@
   },
   "devDependencies": {
     "@types/node": "18.11.10",
-    "typescript": "^4.9.3"
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "eslint": "8.x",
+    "eslint-config-next": "^14.2.3",
+    "lint-staged": "^15.2.5",
+    "prettier": "^3.3.0",
+    "typescript": "^5.4.5"
   }
 }
