--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextra-docs-template",
+  "name": "fixpoint-docs",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "Fixpoint docs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,28 +13,34 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "git+https://github.com/gofixpoint/fixpoint.git"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "Fixpoint, Inc. <team@fixpoint.co>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
+    "url": "https://github.com/gofixpoint/fixpoint/issues"
   },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "homepage": "https://github.com/gofixpoint/fixpoint/tree/main/docs#readme",
   "dependencies": {
-    "next": "^13.0.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "next": "^14.2.3",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.x",
     "eslint-config-next": "^14.2.3",
     "lint-staged": "^15.2.5",
+    "postcss": "^8.4.38",
     "prettier": "^3.3.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
