--- a/.github/workflows/docs-ci.yml
+++ b/.github/workflows/docs-ci.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8
-          working-directory: ${{ github.workspace }}/docs
+          cwd: ${{ github.workspace }}/docs
           run_install: |
             - recursive: true
               args: [--frozen-lockfile, --strict-peer-dependencies]
