--- a/.github/workflows/docs-ci.yml
+++ b/.github/workflows/docs-ci.yml
@@ -21,12 +21,15 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v4
 
-      - uses: pnpm/action-setup@v2
-        working-directory: ${{ github.workspace }}/docs
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
         with:
           version: 8
+          cwd: ${{ github.workspace }}/docs
           run_install: |
             - recursive: true
               args: [--frozen-lockfile, --strict-peer-dependencies]
