--- a/.pylintrc
+++ b/.pylintrc
@@ -437,7 +437,8 @@ disable=raw-checker-failed,
         too-many-instance-attributes,
         too-many-return-statements,
         no-else-return,
-        consider-iterating-dictionary
+        consider-iterating-dictionary,
+        no-member # disabled because pylint gets this wrong on Pydantic and mypy covers it
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
