Fix issue running pytest on Linux with Postgres
We were getting errors when running pytest on Linux version:

```
Linux 5.15.0-107-generic #117~20.04.1-Ubuntu SMP Tue Apr 30 10:35:57 UTC 2024 x86_64 x86_64 GNU/Linux
```

Errors looked like:

```
ImportError while importing test module '/home/dbmikus/workspace/github.com/gofixpoint/fixpoint/tests/storage/supabase_test.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/home/linuxbrew/.linuxbrew/Cellar/python@3.12/3.12.3/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
tests/storage/supabase_test.py:5: in <module>
    from ..supabase_test_utils import test_inputs
tests/supabase_test_utils.py:2: in <module>
    import psycopg
../../../../.cache/pypoetry/virtualenvs/fixpoint-gIXoeRLL-py3.12/lib/python3.12/site-packages/psycopg/__init__.py:9: in <module>
    from . import pq  # noqa: F401 import early to stabilize side effects
../../../../.cache/pypoetry/virtualenvs/fixpoint-gIXoeRLL-py3.12/lib/python3.12/site-packages/psycopg/pq/__init__.py:114: in <module>
    import_from_libpq()
../../../../.cache/pypoetry/virtualenvs/fixpoint-gIXoeRLL-py3.12/lib/python3.12/site-packages/psycopg/pq/__init__.py:106: in import_from_libpq
    raise ImportError(
E   ImportError: no pq wrapper available.
E   Attempts made:
E   - couldn't import psycopg 'c' implementation: No module named 'psycopg_c'
E   - couldn't import psycopg 'binary' implementation: No module named 'psycopg_binary'
E   - couldn't import psycopg 'python' implementation: libpq.so.5: cannot open shared object file: No such file or directory
```

I fixed it by running:

```
poetry add "psycopg[binary,pool]"
```

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ pandas = { version = "^2.2.2", optional = true }
 jinja2 = "^3.1.4"
 diskcache = "^5.6.3"
 supabase = "^2.5.0"
-psycopg = "^3.1.19"
+psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
 
 [tool.poetry.group.dev.dependencies]
 freezegun = "^1.5.1"
