--- a/.pylintrc
+++ b/.pylintrc
@@ -438,6 +438,7 @@ disable=raw-checker-failed,
         too-many-return-statements,
         no-else-return,
         consider-iterating-dictionary,
+        no-else-raise,
         no-member, # disabled because pylint gets this wrong on Pydantic and mypy covers it
         not-callable # disabled because pylint gets this wrong sometimes and mypy covers it
 
