--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ jinja2 = "^3.1.4"
 diskcache = "^5.6.3"
 supabase = "^2.5.0"
 psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
+fastapi = "^0.111.0"
 
 [tool.poetry.group.dev.dependencies]
 freezegun = "^1.5.1"
