--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ flake8 = ">=4.0.0"
 poetry = "1.8.2"
 ipdb = "^0.13.13"
 mypy = "^1.10.0"
+pytest-asyncio = "^0.23.7"
 
 [tool.poetry.extras]
 analyze = ["pandas"]
