--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ jinja2 = "^3.1.4"
 diskcache = "^5.6.3"
 supabase = "^2.5.0"
 psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
-fastapi = { version = "^0.111.0", optional = true }
+fastapi = {version = "^0.111.0", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 freezegun = "^1.5.1"
@@ -52,6 +52,11 @@ pytest-asyncio = "^0.23.7"
 [tool.poetry.extras]
 analyze = ["pandas"]
 examples = ["pandas", "fastapi"]
+
+[[tool.poetry.source]]
+name = "testpypi"
+url = "https://test.pypi.org/legacy/"
+priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
