CI installs all extra dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,7 @@ jobs:
       - run: pip install poetry
         working-directory: ${{ github.workspace }}
 
-      - run: poetry install
-        working-directory: ${{ github.workspace }}
-
-      - run: poetry install -E analyze
+      - run: poetry install --all-extras
         working-directory: ${{ github.workspace }}
 
       - name: Typecheck Python
