Set pre-release package version: 0.20.0-rc1
Set a pre-release package version, 0.20.0-rc1.

We start at 0.20.0 because we were using the "fixpoint" package name
before for a different SDK and used up to version 0.10.0. So we're
reserving versions 0.1 to 0.19.* for the old package and the new package
versioning starts at 0.20.0.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fixpoint"
-version = "0.1.0"
+version = "0.20.0-rc1"
 description = "Open source infra for reliable multi-step AI workflows."
 homepage = "https://fixpoint.co/"
 authors = ["Fixpoint <team@fixpoint.co>"]
