--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ pytest-asyncio = "^0.23.7"
 [tool.poetry.extras]
 analyze = ["pandas"]
 examples = ["pandas", "fastapi"]
+all = ["pandas", "fastapi"]
 
 [[tool.poetry.source]]
 name = "testpypi"
