[structured] Spawn tasks and steps with new context
When you call a task or a step in a structured workflow, clone the
context and then appropriately update the node state when the task or
step is spawned, and then when it either succeeds or fails.

--- a/.pylintrc
+++ b/.pylintrc
@@ -440,7 +440,8 @@ disable=raw-checker-failed,
         consider-iterating-dictionary,
         no-else-raise,
         no-member, # disabled because pylint gets this wrong on Pydantic and mypy covers it
-        not-callable # disabled because pylint gets this wrong sometimes and mypy covers it
+        not-callable, # disabled because pylint gets this wrong sometimes and mypy covers it
+        unsupported-binary-operation
 
 
 # Enable the message, report, category or checker with the given id(s). You can
