--- a/js/dashboard/package.json
+++ b/js/dashboard/package.json
@@ -10,21 +10,31 @@
   },
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.1",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@supabase/supabase-js": "^2.44.4",
     "@tanstack/react-query": "^5.51.1",
+    "@tanstack/react-table": "^8.19.3",
+    "@tanstack/table-core": "^8.19.3",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "deepmerge": "^4.3.1",
     "jotai": "^2.9.0",
     "lucide-react": "^0.408.0",
+    "luxon": "^3.4.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
