--- a/.gitignore
+++ b/.gitignore
@@ -118,12 +118,21 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+**/.env
 .env
-.venv
 env/
-venv/
 ENV/
 env.bak/
+**/.env.*.local
+**/.env.local
+.env.*.local
+.env.local
+**/.env.*.local.json
+**/.env.local.json
+.env.*.local.json
+.env.local.json
+.venv
+venv/
 venv.bak/
 
 # Spyder project settings
