Add auth provider name

--- a/js/dashboard/.env.sample
+++ b/js/dashboard/.env.sample
@@ -4,5 +4,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # Authentication flags (Test Environment)
 NEXT_PUBLIC_AUTH_URL='https://49074506354.propelauthtest.com'
+AUTH_PROVIDER_NAME='propelauth'
 PROPELAUTH_API_KEY=
 PROPELAUTH_REDIRECT_URI='<http://localhost:3000/api/auth/callback>'
